# acca_msgs

morai_msgs_ros1/: CMakeLists.txt  README.md  package.xml
morai_msgs_ros1/msg/: DillyCmd.msg  ERP42Info.msg  FaultStatusInfoSensor.msg  FaultStatusInfoVehicle.msg  GVDirectCmd.msg  GVStateCmd.msg  GetTrafficLightStatus.msg  Lamps.msg  ManipulatorControl.msg  PRStatus.msg  SVADC.msg  SkateboardCtrlCmd.msg  SkidSteer6wUGVCtrlCmd.msg  WoowaDillyStatus.msg
morai_msgs_ros1/srv/: FaultInjectionCtrlSrv.srv  FaultInjectionSensorSrv.srv  FaultInjectionTireSrv.srv
morai_msgs_ros2/: CMakeLists.txt  package.xml
morai_msgs_ros2/msg/: AutoDoorCtrlCmd.msg  AutoDoorStatus.msg  CollisionData.msg  CtrlCmd.msg  DdCtrlCmd.msg  DillyCmd.msg  ERP42Info.msg  EgoDdVehicleStatus.msg  EgoVehicleStatus.msg  EgoVehicleStatusExtended.msg  ElevatorCtrlCmd.msg  EventInfo.msg  FaultInjectionController.msg  FaultInjectionResponse.msg  FaultInjection_Sensor.msg  FaultInjection_Tire.msg  FaultStatusInfo.msg  FaultStatusInfoOverall.msg  FaultStatusInfoSensor.msg  FaultStatusInfoVehicle.msg  FaultStatusInfo_Sensor.msg  GPSMessage.msg  GVDirectCmd.msg  GVStateCmd.msg  GetTrafficLightStatus.msg  GhostMessage.msg  IntersectionStatus.msg  IntscnTL.msg  Lamps.msg  ManipulatorControl.msg  MapSpec.msg  MoraiSimProcHandle.msg  MoraiSimProcStatus.msg  MoraiTLIndex.msg  MoraiTLInfo.msg  MultiEgoSetting.msg  MultiPlayEventRequest.msg  NpcGhostCmd.msg  NpcGhostInfo.msg  ObjectStatus.msg  (+27 more)
